# PardusBrowser

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
.github/skills/open-browser-only/: SKILL.md
.github/workflows/: ci.yml
ai-agent/open-browser/src/llm/: index.ts
ai-agent/pardus-browser/src/core/: BrowserInstance.ts  CookieStore.ts  logger.ts  types.ts
ai-agent/pardus-browser/src/llm/: prompts.ts
ai-agent/pardus-browser/src/tools/: definitions.ts  executor.ts  types.ts
crates/open-core/src/: pdf.rs
crates/pardus-cdp/: Cargo.toml
crates/pardus-cdp/src/: provider.rs  server.rs
crates/pardus-cdp/src/domain/: dom.rs  input.rs  mod.rs  network.rs  page.rs  pardus_ext.rs  runtime.rs
crates/pardus-cdp/src/transport/: ws.rs
crates/pardus-challenge/: Cargo.toml
crates/pardus-challenge/src/: interceptor.rs  lib.rs
crates/pardus-cli/: Cargo.toml
crates/pardus-cli/src/: logging.rs  main.rs
crates/pardus-cli/src/commands/: interact.rs  map.rs  navigate.rs  repl.rs
crates/pardus-core/: Cargo.toml
crates/pardus-core/src/: app.rs  browser.rs  config.rs  feed.rs  lib.rs  page.rs  pdf.rs  session.rs
crates/pardus-core/src/browser/: helpers.rs  interact.rs  mod.rs  navigate.rs
crates/pardus-core/src/cache/: disk_cache.rs  dom_cache.rs  http_cache_policy.rs  resource_cache.rs
crates/pardus-core/src/frame/: mod.rs
crates/pardus-core/src/http/: client.rs
crates/pardus-core/src/interact/: actions.rs  form.rs  js_interact.rs  mod.rs  wait.rs
crates/pardus-core/src/intercept/: mod.rs  rules.rs
crates/pardus-core/src/js/: bootstrap.js  dom.rs  extension.rs  fetch.rs  ops.rs  runtime.rs  snapshot.rs
crates/pardus-core/src/output/: llm_formatter.rs
crates/pardus-core/src/prefetch/: prefetcher.rs
crates/pardus-core/src/push/: early_scanner.rs
crates/pardus-core/src/resource/: fetcher.rs  mod.rs  pool.rs  scheduler.rs
crates/pardus-core/src/semantic/: mod.rs  tree.rs
crates/pardus-core/src/tab/: tab.rs
crates/pardus-core/tests/: browser_agent_test.rs  meta_refresh_test.rs
crates/pardus-debug/: Cargo.toml
crates/pardus-debug/src/: record.rs
crates/pardus-kg/src/: config.rs  crawler.rs  discovery.rs  fingerprint.rs
crates/pardus-server/: Cargo.toml
crates/pardus-server/src/: main.rs  router.rs  state.rs
crates/pardus-tauri/: package-lock.json  package.json
crates/pardus-tauri/src/: api.ts  challenge.ts  events.ts  instances.ts  main.ts  types.ts
crates/pardus-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/pardus-tauri/src-tauri/src/: challenge.rs  commands.rs  instance.rs  lib.rs  main.rs
web/: package-lock.json
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: CookieInspector.tsx  InteractionConsole.tsx  NavBar.tsx  NetworkLog.tsx  TabBar.tsx  TreeViewer.tsx
web/src/hooks/: useEvents.ts
(+4 files in other folders)
