[package]
name = "pardus-core"
version.workspace = true
edition.workspace = true

[dependencies]
# HTML Parsing
scraper = "0.22"

# Async & HTTP
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
cookie_store = "0.21"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
regex = "1"
async-trait = { workspace = true }
smallvec = "1"
base64 = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Network debugging
pardus-debug = { path = "../pardus-debug" }
http = "1"
chrono = { workspace = true }

# JS execution (optional — enables --js flag)
deno_core = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Caching (optional — enables disk cache with blake3 hashing)
blake3 = { workspace = true, optional = true }

# Streaming parser (optional — enables lol_html streaming)
lol_html = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

# HTTP/2 push (optional — low-level PUSH_PROMISE reception)
h2 = { workspace = true, optional = true }

[features]
default = ["js"]
js = ["deno_core", "futures-util", "reqwest/stream", "bytes"]
cache = ["blake3"]
streaming-parser = ["lol_html"]
h2-push = ["h2"]

[dev-dependencies]
tempfile = "3"
